<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_data">Delete all data</string>
    <string name="editor_insert_pet_failed">Error with saving item</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this item</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_fill_all_sections">Please fill all sections</string>
    <string name="editor_name">Name</string>
    <string name="editor_name_hint">Product Name</string>
    <string name="editor_quantity">Quantity</string>
    <string name="editor_quantity_initial_value">0</string>
    <string name="editor_price">Price</string>
    <string name="editor_price_hint">9.99</string>
    <string name="editor_supplier_name">Supplier Name</string>
    <string name="editor_supplier_name_hint">Supplier Name</string>
    <string name="editor_phone">Phone</string>
    <string name="editor_phone_hint">05435553322</string>
    <string name="out_of_stock">This item out of stock.</string>
    <string name="quantity_not_valid">Quantity is not valid</string>
    <string name="price_not_valid">Price is not valid</string>
    <string name="quantity_bigger_than_zero">Quantity must be bigger than 0</string>
</resources>
