<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity"
    tools:showIn="@layout/activity_editor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <TextView
                    style="@style/EditorTextView"
                    android:text="@string/editor_name" />

                <EditText
                    android:id="@+id/name"
                    style="@style/EditorEditText"
                    android:hint="@string/editor_name_hint"
                    android:inputType="textCapWords" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <TextView
                    style="@style/EditorTextView"
                    android:layout_weight="1.6"
                    android:text="@string/editor_quantity" />

                <ImageButton
                    android:id="@+id/minus_button"
                    style="@style/EditorImageButton"
                    android:src="@drawable/ic_minus" />

                <EditText
                    android:id="@+id/quantity"
                    style="@style/EditorEditText"
                    android:inputType="number"
                    android:text="@string/editor_quantity_initial_value" />

                <ImageButton
                    android:id="@+id/plus_button"
                    style="@style/EditorImageButton"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <TextView
                    style="@style/EditorTextView"
                    android:text="@string/editor_price" />

                <EditText
                    android:id="@+id/price"
                    style="@style/EditorEditText"
                    android:hint="@string/editor_price_hint"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <TextView
                    style="@style/EditorTextView"
                    android:paddingBottom="8dp"
                    android:text="@string/editor_supplier_name" />

                <EditText
                    android:id="@+id/supplier_name"
                    style="@style/EditorEditText"
                    android:hint="@string/editor_supplier_name_hint"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <TextView
                    style="@style/EditorTextView"
                    android:text="@string/editor_phone" />

                <EditText
                    android:id="@+id/supplier_phone"
                    style="@style/EditorEditText"
                    android:hint="@string/editor_phone_hint"
                    android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>